# share

./: .env.example  Cargo.toml
migrations/: 20210625171820_create_users_table.down.sql  20210625171820_create_users_table.up.sql  20210628001959_create_sessions_table.down.sql  20210628001959_create_sessions_table.up.sql
src/: main.rs
src/api/: mod.rs  session.rs
src/controllers/: mod.rs  session.rs  user.rs
src/db/: user.rs
src/models/: user.rs
src/repositories/: session.rs  user.rs
src/services/: user.rs
src/utils/: actix.rs  error.rs  mod.rs
src/utils/validator/: email.rs  length.rs  matches.rs  mod.rs
src/validators/: user.rs
