[package]
name = "kkx_share"
version = "0.1.0"
authors = ["Marko <goncarmarko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.7"
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls", "postgres", "uuid" ] }
serde = { version = "1.0.126", features = [ "derive" ] }
dotenv = "0.15.0"
uuid = "0.8.2"
